<resources>
    <string name="app_name">Little Movie</string>

    <string name="new_user_signup">SignUp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="register">Register</string>
    <string name="welcome_to">Welcome to</string>
    <string name="email_example">abc@example.com</string>
    <string name="do_you_want_to_logout">Do you want to logout?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="do_you_want_to_exit">Do you want to Exit ?</string>
    <string name="about_app">The application was designed by "Flat Code"</string>
    <string name="none_display">There are no items to display</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="default_privacy_policy">Welcome to Little Movie!\n\nYour privacy is important to us. Little Movie is committed to respecting and protecting your privacy while browsing and exploring movies.\n\n• Data Privacy: We do not collect or sell your personal information.\n• Storage: Your favorite movies, categories, and preferences are stored locally on your device.\n• Services: Content links and media details adhere to standard privacy and data protection guidelines.\n\nThank you for choosing Little Movie!</string>
    <string name="all">All</string>
    <string name="username">Username</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="explore">Explore</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="my_movies">My Movies</string>
    <string name="editors_choice">Editors Choice</string>
    <string name="most_views">Most Views</string>
    <string name="most_loves">Most Loves</string>
    <string name="new_movies">New Movies</string>
    <string name="favorites">Favorites</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="categories">Categories</string>
    <string name="cast">Cast</string>
    <string name="my_categories">My Categories</string>
    <string name="my_cast">My Cast</string>
    <string name="category">Category</string>
    <string name="Comments">Comments</string>
    <string name="loves">Loves</string>
    <string name="comment">Comment</string>
    <string name="details_movie">Details Movie</string>
    <string name="add_comment">Add Comment</string>
    <string name="submit">Submit</string>
    <string name="year">Year</string>
    <string name="duration">Duration</string>
    <string name="the_description">The Description</string>
    <string name="views">Views</string>
    <string name="date">Date</string>
    <string name="cast_details">Cast Details</string>
    <string name="password_hint">********</string>
    <string name="website">Website</string>
    <string name="facebook">Facebook</string>
    <string name="most_movies">Most Movies</string>
    <string name="most_interested">Most Interested</string>
    <string name="zero">0</string>
    <string name="close">Close</string>
    <string name="done">Done</string>
    <string name="crop_image">Crop Image</string>
    <string name="back">Back</string>
    <string name="no_internet_connection">No internet connection</string>

    <string name="please_wait">Please wait&#8230;</string>
    <string name="loading">Loading&#8230;</string>
</resources>