<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.flatcode.littlemovie.ui.main.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.flatcode.littlemovie.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/myMoviesFragment"
        android:name="com.flatcode.littlemovie.ui.movie.myMoviesFragment"
        android:label="@string/my_movies"
        tools:layout="@layout/fragment_my_movies" />

    <fragment
        android:id="@+id/categoriesFragment"
        android:name="com.flatcode.littlemovie.ui.category.CategoriesFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_categories" />
</navigation>