<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth.RegisterActivity"
    tools:ignore="all">

        <ImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/background" />

        <ImageView
            android:id="@+id/backWhite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:contentDescription="@null"
            android:src="@color/white"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/backBlack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:contentDescription="@null"
            android:src="@color/black"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/toolbarRl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@null"
                    android:src="@drawable/logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/logo"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="?colorError"
                    android:textSize="21sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="15dp"
                android:layout_weight="1.5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:drawablePadding="5dp"
                        app:drawableStartCompat="@drawable/ic_person_white"
                        app:drawableTint="?colorError"
                        android:gravity="center_vertical"
                        android:text="@string/username"
                        android:textColor="?colorError"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/nameTil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false">

                        <EditText
                            android:id="@+id/nameEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="name"
                            android:background="@drawable/button"
                            android:hint="@string/app_name"
                            android:inputType="textPersonName"
                            android:maxLength="20"
                            android:padding="15dp"
                            android:textColor="?colorError"
                            android:textColorHint="?colorError"
                            android:textSize="14sp"
                            android:textStyle="normal" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:drawablePadding="5dp"
                        app:drawableStartCompat="@drawable/ic_email_gray"
                        app:drawableTint="?colorError"
                        android:gravity="center_vertical"
                        android:text="@string/email"
                        android:textColor="?colorError"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailTil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false">

                        <EditText
                            android:id="@+id/emailEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="emailAddress"
                            android:background="@drawable/button"
                            android:hint="@string/email_example"
                            android:inputType="textEmailAddress"
                            android:maxLength="50"
                            android:padding="15dp"
                            android:textColor="?colorError"
                            android:textColorHint="?colorError"
                            android:textSize="14sp"
                            android:textStyle="normal" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:drawablePadding="5dp"
                        app:drawableStartCompat="@drawable/ic_lock_gray"
                        app:drawableTint="?colorError"
                        android:gravity="center_vertical"
                        android:text="@string/password"
                        android:textColor="?colorError"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/cPasswordTil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="?colorError">

                        <EditText
                            android:id="@+id/cPasswordEt"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:autofillHints="password"
                            android:background="@drawable/button"
                            android:hint="@string/password_hint"
                            android:inputType="textPassword"
                            android:maxLength="20"
                            android:paddingHorizontal="20dp"
                            android:textColor="?colorError"
                            android:textColorHint="?colorError"
                            android:textSize="14sp"
                            android:textStyle="normal" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordTil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="?colorError">

                        <EditText
                            android:id="@+id/passwordEt"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:autofillHints="password"
                            android:background="@drawable/button"
                            android:hint="@string/password_hint"
                            android:inputType="textPassword"
                            android:maxLength="20"
                            android:paddingHorizontal="20dp"
                            android:textColor="?colorError"
                            android:textColorHint="?colorError"
                            android:textSize="14sp"
                            android:textStyle="normal" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="15dp">

                        <TextView
                            android:id="@+id/forget"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_toEndOf="@id/login"
                            android:background="@drawable/button6"
                            android:backgroundTint="@color/black"
                            android:gravity="start"
                            android:padding="10dp"
                            android:text="@string/forget_password"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:background="@drawable/button6"
                            android:backgroundTint="?mc_track"
                            android:padding="10dp"
                            android:text="@string/login"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                    </RelativeLayout>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="0.3"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/go"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/button2"
                    android:contentDescription="@null"
                    android:rotation="180"
                    android:src="@drawable/ic_back_white" />

            </LinearLayout>

        </LinearLayout>

</FrameLayout>